[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "butler-cli"
version = "0.1.0"
description = "A dapper little CLI that tracks drinks by the Rule of 3"
authors = [{ name = "You" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
"typer>=0.12",
"rich>=13.7",
]


[project.scripts]
butler = "butler.cli:app"


[tool.setuptools.packages.find]
where = ["src"]